--- a/verovio.html
+++ b/verovio.html
@@ -36,7 +36,7 @@
         }
         
         // A MusicXML file
-        var file = 'data/example.mei';
+        var file = 'Imagine_Dragons-Radioactive_Score.mei';
         // A MEI file
         //var file = 'https://www.verovio.org/editor/brahms.mei';
         
