--- a/Week_4_Lab/Week4_Data.html
+++ b/Week_4_Lab/Week4_Data.html
@@ -19,11 +19,11 @@
 </div>
 
 <h1>Histogram</h1>
-<img src="histogram.png"/>
+<img src="Task2/histogram.png"/>
 <h1>Piano Roll</h1>
-<img src="piano_roll.png"/>
+<img src="Task2/piano_roll.png"/>
 <h1>Scatter Plot</h1>
-<img src="scatter_plot.png"/>
+<img src="Task2/scatter_plot.png"/>
 
 </body>
 
