--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="topnav">
   <a href="index.html">Home</a>
-  <a href="ivaylogeorgiev24.github.io/MCA-2019/verovio.html">Weeks 2 and 3 Score</a>
+  <a href="verovio.html">Weeks 2 and 3 Score</a>
   <a href="Week_4_Lab/Task1/output_file.csv">Week 4 Lab Task 1 - Output file</a>
   <a href="Week_4_Lab/Week4_Data.html">Week 4 Lab Task 2 - Data</a>
   <a href="Week_5_Lab/meischema.xsd">Week 5 XML Schema</a>
