--- a/Week_4_Lab/Week4_Data.html
+++ b/Week_4_Lab/Week4_Data.html
@@ -11,7 +11,7 @@
   <a href="../index.html">Home</a>
   <a href="../verovio.html">Weeks 2 and 3 Score</a>
   <a href="../Week_4_Lab/Task1/output_file.csv">Week 4 Lab Task 1 - Output file</a>
-  <a href="../Week_4_Lab/Task2/Week4_Data.html">Week 4 Lab Task 2 - Data</a>
+  <a href="../Week_4_Lab/Week4_Data.html">Week 4 Lab Task 2 - Data</a>
   <a href="../Week_5_Lab/meischema.xsd">Week 5 XML Schema</a>
   <a href="https://ivaylogeorgiev24.github.io/MCA-2019/myMeta.html">Week 7 Metadata Annotation</a>
   <a href="../Week_8_Lab/Week8_Task1.xlsx">Week 8 Lab Task 1 - Table</a>
