--- a/Week_8_Lab/Week8_Data.html
+++ b/Week_8_Lab/Week8_Data.html
@@ -13,7 +13,7 @@
   <a href="../Week_4_Lab/Task1/outup_file.csv">Week 4 Lab Task 1 - Output file</a>
   <a href="../Week_4_Lab/Week4_Data.html">Week 4 Lab Task 2 - Data</a>
   <a href="../Week_5_Lab/meischema.xsd">Week 5 XML Schema</a>
-  <a href="https://ivaylogeorgiev24.github.io/MCA-2019/myMeta.html">Week 7 Metadata Annotation</a>
+  <a href="../myMeta.html">Week 7 Metadata Annotation</a>
   <a href="../Week_8_Lab/Week8_Task1.xlsx">Week 8 Lab Task 1 - Table</a>
   <a href="../Week_8_Lab/Week8_Data.html">Week 8 Lab Task 2 - Track Data</a>
 </div>
