--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@ Music Curation And Analytics Portfolio<br/>2322320G<br/>
 </div>
 
 <h2>Week 1 Project Description</h2>
-The theme for my dataset will be the rock band Imagine Dragons.
+<p>The theme for my dataset will be the rock band Imagine Dragons.
 The data relating to my theme has partially been collected. 
 The band's<a href="https://www.imaginedragonsmusic.com">website</a> contains information about their albums and songs, 
 also the lyrics to their songs and the music videos. However, it does not contain sheet music as a form of notated data. 
-The data is symply curated and presented to the user, it is not analiysed.
+The data is symply curated and presented to the user, it is not analiysed.</p>
 </body>
 
 </html>
