--- a/myMeta.html
+++ b/myMeta.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <title>With Styling</title>
+  <link rel="stylesheet" type="text/css" href="index.css">
   <meta charset="utf-8">
   <link rel="stylesheet" href="myMeta.css" media="all" />
   <script src="js/CETEI.js"></script>
