--- a/verovio.html
+++ b/verovio.html
@@ -23,6 +23,17 @@
     </style>
 </head>
 <body>
+ <div class="topnav">
+  <a href="index.html">Home</a>
+  <a href="verovio.html">Weeks 2&3 Score</a>
+  <a href="Week_4_Lab/Task1/outup_file.csv">Week 4 Table</a>
+  <a href="Week_4_Lab/Week4_Data.html">Week 4 Lab Data</a>
+  <a href="Week_5_Lab/meischema.xsd">Week 5 Schema</a>
+  <a href="myMeta.html">Week 7 Metadata</a>
+  <a href="Week_8_Lab/Week8_Task1.xlsx">Week 8 Lab Table</a>
+  <a href="Week_8_Lab/Week8_Data.html">Week 8 Lab Analysis</a>
+  <a href="Week_9_Lab/Week9_Data.html">Week 9 Lab</a>
+</div>
     <div class="header">How to use the Verovio App</div>
     <div id="app">Verovio is loading...</div>
     <script type="module">
