--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <a href="Week_8_Lab/Week8_Task1.xlsx">Week 8 Lab Table</a>
   <a href="Week_8_Lab/Week8_Data.html">Week 8 Lab Analysis</a>
   <a href="Week_9_Lab/Week9_Data.html">Week 9 Lab</a>
+  <a href="Week_10_Lab/Week10.html">Week 10 Lab</a>
 </div>
 <div id="index-text">
 Music Curation And Analytics Portfolio<br/>2322320G<br/>
