--- a/Week_10_Lab/Week10.html
+++ b/Week_10_Lab/Week10.html
@@ -17,7 +17,7 @@
   <a href="../Week_8_Lab/Week8_Task1.xlsx">Week 8 Lab Task 1 - Table</a>
   <a href="../Week_8_Lab/Week8_Data.html">Week 8 Lab Task 2 - Track Data</a>
   <a href="../Week_9_Lab/Week9_Data.html">Week 9 Lab</a>
-  <a href="../Week_10_Lab/Week9_Data.html">Week 10 Lab</a>
+  <a href="../Week_10_Lab/Week10.html">Week 10 Lab</a>
 </div>
 <h1>Songs used</h1>
 <ul>
