--- a/Week_8_Lab/Week8_Data.html
+++ b/Week_8_Lab/Week8_Data.html
@@ -17,6 +17,7 @@
   <a href="../Week_8_Lab/Week8_Task1.xlsx">Week 8 Lab Table</a>
   <a href="../Week_8_Lab/Week8_Data.html">Week 8 Lab Analysis</a>
   <a href="../Week_9_Lab/Week9_Data.html">Week 9 Lab</a>
+  <a href="../Week_10_Lab/Week10.html">Week 10 Lab</a>
 </div>
 <h1>Ketsa - Slow Vibing</h1>
 <img src="Track1/Ketsa_SlowVibing.png">
