--- a/Week_10_Lab/Week10.html
+++ b/Week_10_Lab/Week10.html
@@ -9,13 +9,13 @@
 <body>
 <div class="topnav">
   <a href="../index.html">Home</a>
-  <a href="../verovio.html">Weeks 2 and 3 Score</a>
-  <a href="../Week_4_Lab/Task1/outup_file.csv">Week 4 Lab Task 1 - Output file</a>
-  <a href="../Week_4_Lab/Week4_Data.html">Week 4 Lab Task 2 - Data</a>
-  <a href="../Week_5_Lab/meischema.xsd">Week 5 XML Schema</a>
-  <a href="../myMeta.html">Week 7 Metadata Annotation</a>
-  <a href="../Week_8_Lab/Week8_Task1.xlsx">Week 8 Lab Task 1 - Table</a>
-  <a href="../Week_8_Lab/Week8_Data.html">Week 8 Lab Task 2 - Track Data</a>
+  <a href="../verovio.html">Weeks 2&3 Score</a>
+  <a href="../Week_4_Lab/Task1/outup_file.csv">Week 4 Table</a>
+  <a href="../Week_4_Lab/Week4_Data.html">Week 4 Lab Data</a>
+  <a href="../Week_5_Lab/meischema.xsd">Week 5 Schema</a>
+  <a href="../myMeta.html">Week 7 Metadata</a>
+  <a href="../Week_8_Lab/Week8_Task1.xlsx">Week 8 Lab Table</a>
+  <a href="../Week_8_Lab/Week8_Data.html">Week 8 Lab Analysis</a>
   <a href="../Week_9_Lab/Week9_Data.html">Week 9 Lab</a>
   <a href="../Week_10_Lab/Week10.html">Week 10 Lab</a>
 </div>
