--- a/verovio.html
+++ b/verovio.html
@@ -31,7 +31,7 @@
   <a href="Week_4_Lab/Week4_Data.html">Week 4 Lab Data</a>
   <a href="Week_5_Lab/meischema.xsd">Week 5 Schema</a>
   <a href="myMeta.html">Week 7 Metadata</a>
-  <a href="Week_8_Lab/Week8_Task1.xlsx">Week 8 Lab Table</a>
+  <a href="Week_8_Lab/Week8_Task1.xlsx">Week 8 Table</a>
   <a href="Week_8_Lab/Week8_Data.html">Week 8 Lab Analysis</a>
   <a href="Week_9_Lab/Week9_Data.html">Week 9 Lab</a>
   <a href="Week_10_Lab/Week10.html">Week 10 Lab</a>
