--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Music Curation And Analytics Portfolio<br/>2322320G<br/>
 </div>
 
 <h2>Week 1 Project Description</h2>
-<p>The theme for my dataset will be the rock band Imagine Dragons.
+<p class="el_center">The theme for my dataset will be the rock band Imagine Dragons.
 The data relating to my theme has partially been collected. 
 The band's <a href="https://www.imaginedragonsmusic.com">website</a> contains information about their albums and songs, 
 also the lyrics to their songs and the music videos. However, it does not contain sheet music as a form of notated data. 
