--- a/verovio.html
+++ b/verovio.html
@@ -36,7 +36,8 @@
   <a href="Week_9_Lab/Week9_Data.html">Week 9 Lab</a>
   <a href="Week_10_Lab/Week10.html">Week 10 Lab</a>
 </div>
-    <p class="el_center"> This is a representation of my MEI file, rendered with the help of Verovio</p>
+    <div class="header">How to use the Verovio App</div>
+    <div id="app">Verovio is loading...</div>
     <script type="module">
         import 'https://www.verovio.org/javascript/app/verovio-app.js';
         
