--- a/verovio.html
+++ b/verovio.html
@@ -36,8 +36,10 @@
   <a href="Week_9_Lab/Week9_Data.html">Week 9 Lab</a>
   <a href="Week_10_Lab/Week10.html">Week 10 Lab</a>
 </div>
+    <div class="el_center">
     <div class="header">How to use the Verovio App</div>
     <div id="app">Verovio is loading...</div>
+    </div>
     <script type="module">
         import 'https://www.verovio.org/javascript/app/verovio-app.js';
         
