--- a/verovio.html
+++ b/verovio.html
@@ -39,6 +39,7 @@
     <div class="el_center">
     <div class="header">How to use the Verovio App</div>
     <div id="app">Verovio is loading...</div>
+    <p> This is a rendition of my MEI file, using Verovio</p>
     </div>
     <script type="module">
         import 'https://www.verovio.org/javascript/app/verovio-app.js';
