--- a/verovio.html
+++ b/verovio.html
@@ -38,8 +38,8 @@
 </div>
     <div class="el_center">
     <div class="header">How to use the Verovio App</div>
+     This is a rendition of my MEI file, using Verovio
     <div id="app">Verovio is loading...</div>
-    <p> This is a rendition of my MEI file, using Verovio</p>
     </div>
     <script type="module">
         import 'https://www.verovio.org/javascript/app/verovio-app.js';
