--- a/Week_10_Lab/Week10.html
+++ b/Week_10_Lab/Week10.html
@@ -25,6 +25,7 @@
 	<li>Checkie Brown - Jeanny(CB35)</li>
 	<li>Yung Kartz - Starz</li>
 </ul>
+	<div class="el_center">
 <h1>Task 1 Captures</h1>
 <img src="Task1/1.png"/>
 <img src="Task1/2.png"/>
@@ -38,6 +39,7 @@
 <img style="max-width:25%;max-height:25%" src="Task2/Composition_Redone2.png"/>
 <h2>Analysis</h2>
 Scores do have some aspects in common, however, the original is distorded after the conversion from SonicVisualizer.
+		</div>
 </body>
 
 </html>
