--- a/verovio.html
+++ b/verovio.html
@@ -35,12 +35,10 @@
   <a href="Week_8_Lab/Week8_Data.html">Week 8 Lab Analysis</a>
   <a href="Week_9_Lab/Week9_Data.html">Week 9 Lab</a>
   <a href="Week_10_Lab/Week10.html">Week 10 Lab</a>
-</div>
-    <div class="el_center">
+</div>  
     <div class="header">How to use the Verovio App</div>
-     This is a rendition of my MEI file, using Verovio
+    <div class="header">This is a rendition of my MEI file, using Verovio</div>
     <div id="app">Verovio is loading...</div>
-    </div>
     <script type="module">
         import 'https://www.verovio.org/javascript/app/verovio-app.js';
         
