--- a/Week_4_Lab/Week4_Data.html
+++ b/Week_4_Lab/Week4_Data.html
@@ -19,14 +19,14 @@
   <a href="../Week_9_Lab/Week9_Data.html">Week 9 Lab</a>
   <a href="../Week_10_Lab/Week10.html">Week 10 Lab</a>
 </div>
-
+<div class="el_center">
 <h1>Histogram</h1>
 <img src="Task2/histogram.png"/>
 <h1>Piano Roll</h1>
 <img src="Task2/piano_roll.png"/>
 <h1>Scatter Plot</h1>
 <img src="Task2/scatter_plot.png"/>
-
+</div>
 </body>
 
 </html>
