--- a/Week_8_Lab/Week8_Data.html
+++ b/Week_8_Lab/Week8_Data.html
@@ -19,6 +19,7 @@
   <a href="../Week_9_Lab/Week9_Data.html">Week 9 Lab</a>
   <a href="../Week_10_Lab/Week10.html">Week 10 Lab</a>
 </div>
+  <div class="el_center">
 <h1>Ketsa - Slow Vibing</h1>
 <img src="Track1/Ketsa_SlowVibing.png">
 <img src="Track1/Ketsa_SlowVibing1.png">
@@ -33,6 +34,7 @@
 extracting information, whereas waveform analysis does not provide that much of a distinct representation of frequency over time.
 For example, in the YungKartz song, the spectogram representation shows a better dipiction of the frequency variation
 over time.</p>
+    </div>
 </body>
 
 </html>
