--- a/Week_9_Lab/Week9_Data.html
+++ b/Week_9_Lab/Week9_Data.html
@@ -19,6 +19,7 @@
   <a href="../Week_9_Lab/Week9_Data.html">Week 9 Lab</a>
   <a href="../Week_10_Lab/Week10.html">Week 10 Lab</a>
 </div>
+  <div class="el_center">
 <h1>Ketsa - Slow Vibing</h1>
 <img src="Track1/Track1.png">
 <h1>Checkie Brown - Jeanny(CB35)</h1>
@@ -32,6 +33,7 @@
 <h1>Analysis</h1>
 <p>There is a distinct difference between the first two tracks and the last one. The histogram of the third track shows that the levels are lower than those of the first
 two tracks meaning that there will be a difference which can be expected when listening to the third track compared to the other two.</p>
+</div>
 </body>
 
 </html>
