--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Music Curation And Analytics Portfolio<br/>2322320G<br/>
 <h1>Week 1 Project Description</h1>
 <p class="el_center">The theme for my dataset will be the rock band Imagine Dragons.
 The data relating to my theme has partially been collected. 
-The band's <a href="https://www.imaginedragonsmusic.com">website</a> contains information about their albums and songs, 
+The band's website contains information about their albums and songs, 
 also the lyrics to their songs and the music videos. However, it does not contain sheet music as a form of notated data. 
 The data is simply curated and presented to the user, it is not analysed.</p>
 </body>
