--- a/verovio.html
+++ b/verovio.html
@@ -35,8 +35,9 @@
   <a href="Week_8_Lab/Week8_Data.html">Week 8 Lab Analysis</a>
   <a href="Week_9_Lab/Week9_Data.html">Week 9 Lab</a>
   <a href="Week_10_Lab/Week10.html">Week 10 Lab</a>
-</div>  
-    <div class="header">How to use Verovio</div>
+</div>
+    <div class="el_center">
+    <div class="header">This is a rendition of my MEI file using Verovio</div></div>
     <div id="app">Verovio is loading...</div>
     <script type="module">
         import 'https://www.verovio.org/javascript/app/verovio-app.js';
