--- a/Week_4_Lab/Week4_Data.html
+++ b/Week_4_Lab/Week4_Data.html
@@ -21,7 +21,7 @@
 </div>
 <div class="el_center">
 <h1>Histogram</h1>
-<img style="max-width:50%;max-height:50%" src="Task2/histogram.png"/>
+<img style="max-width:50%;max-height:50%;border:1px solid black;" src="Task2/histogram.png"/>
 <h1>Piano Roll</h1>
 <img style="max-width:50%;max-height:50%" src="Task2/piano_roll.png"/>
 <h1>Scatter Plot</h1>
