--- a/Week_4_Lab/Week4_Data.html
+++ b/Week_4_Lab/Week4_Data.html
@@ -23,9 +23,9 @@
 <h1>Histogram</h1>
 <img style="max-width:50%;max-height:50%;border:1px solid black;" src="Task2/histogram.png"/>
 <h1>Piano Roll</h1>
-<img style="max-width:50%;max-height:50%" src="Task2/piano_roll.png"/>
+<img style="max-width:50%;max-height:50%;border:1px solid black;" src="Task2/piano_roll.png"/>
 <h1>Scatter Plot</h1>
-<img style="max-width:50%;max-height:50%" src="Task2/scatter_plot.png"/>
+<img style="max-width:50%;max-height:50%;border:1px solid black;" src="Task2/scatter_plot.png"/>
 </div>
 </body>
 
