--- a/Week_8_Lab/Week8_Data.html
+++ b/Week_8_Lab/Week8_Data.html
@@ -21,14 +21,14 @@
 </div>
   <div class="el_center">
 <h1>Ketsa - Slow Vibing</h1>
-<img src="Track1/Ketsa_SlowVibing.png">
-<img src="Track1/Ketsa_SlowVibing1.png">
+<img style="max-width:50%;max-height:50%;border:1px solid black;" src="Track1/Ketsa_SlowVibing.png">
+<img style="max-width:50%;max-height:50%;border:1px solid black;" src="Track1/Ketsa_SlowVibing1.png">
 <h1>Checkie Brown - Jeanny(CB35)</h1>
-<img src="Track2/CheckieBrown_JeannyCB35.png">
-<img src="Track2/CheckieBrown_JeannyCB351.png">
+<img style="max-width:50%;max-height:50%;border:1px solid black;" src="Track2/CheckieBrown_JeannyCB35.png">
+<img style="max-width:50%;max-height:50%;border:1px solid black;" src="Track2/CheckieBrown_JeannyCB351.png">
 <h1>Yung Kartz - Starz</h1>
-<img src="Track3/YungKartz_Starz.png">
-<img src="Track3/YungKartz_Starz1.png">
+<img style="max-width:50%;max-height:50%;border:1px solid black;" src="Track3/YungKartz_Starz.png">
+<img style="max-width:50%;max-height:50%;border:1px solid black;" src="Track3/YungKartz_Starz1.png">
 <h1>Analysis</h1>
 <p>Time-frequency analysis allows for a better representation of frequency throughout time. This can be helpful for
 extracting information, whereas waveform analysis does not provide that much of a distinct representation of frequency over time.
