--- a/Week_9_Lab/Week9_Data.html
+++ b/Week_9_Lab/Week9_Data.html
@@ -21,15 +21,15 @@
 </div>
   <div class="el_center">
 <h1>Ketsa - Slow Vibing</h1>
-<img src="Track1/Track1.png">
+<img style="max-width:50%;max-height:50%;border:1px solid black;" src="Track1/Track1.png">
 <h1>Checkie Brown - Jeanny(CB35)</h1>
-<img src="Track2/Track2.png">
+<img style="max-width:50%;max-height:50%;border:1px solid black;" src="Track2/Track2.png">
 <h1>Yung Kartz - Starz</h1>
-<img src="Track3/Track3.png">
+<img style="max-width:50%;max-height:50%;border:1px solid black;" src="Track3/Track3.png">
 <h1>Histograms</h1>
-<img src="Track1/Track1_ChromagramAnalysis.png">
-<img src="Track2/Track2_ChromagramAnalysis.png">
-<img src="Track3/Track3_ChromagramAnalysis.png">
+<img style="max-width:50%;max-height:50%;border:1px solid black;" src="Track1/Track1_ChromagramAnalysis.png">
+<img style="max-width:50%;max-height:50%;border:1px solid black;" src="Track2/Track2_ChromagramAnalysis.png">
+<img style="max-width:50%;max-height:50%;border:1px solid black;" src="Track3/Track3_ChromagramAnalysis.png">
 <h1>Analysis</h1>
 <p>There is a distinct difference between the first two tracks and the last one. The histogram of the third track shows that the levels are lower than those of the first
 two tracks meaning that there will be a difference which can be expected when listening to the third track compared to the other two.</p>
