--- a/Week_10_Lab/Week10.html
+++ b/Week_10_Lab/Week10.html
@@ -20,7 +20,7 @@
   <a href="../Week_10_Lab/Week10.html">Week 10 Lab</a>
 </div>
 <h1>Songs used</h1>
-<ul style="list-style-type:none;position:relative;right:20px;>
+<ul style="list-style-type:none;position:relative;right:20px;">
 	<li>Ketsa - Slow Vibing</li>
 	<li>Checkie Brown - Jeanny(CB35)</li>
 	<li>Yung Kartz - Starz</li>
