--- a/Week_10_Lab/Week10.html
+++ b/Week_10_Lab/Week10.html
@@ -27,16 +27,16 @@
 </ul>
 	<div class="el_center">
 <h1>Task 1 Captures</h1>
-<img src="Task1/1.png"/>
-<img src="Task1/2.png"/>
-<img src="Task1/3.png"/>
+<img style="border:1px solid black;" src="Task1/1.png"/>
+<img style="border:1px solid black;" src="Task1/2.png"/>
+<img style="border:1px solid black;" src="Task1/3.png"/>
 <h1>Task 2 Analysis</h1>
 <h2>Original</h2>
-<img style="max-width:25%;max-height:25%" src="Task2/Composition_OG1.png"/>
-<img style="max-width:25%;max-height:25%" src="Task2/Composition_OG2.png"/>
+<img style="max-width:25%;max-height:25%;border:1px solid black;" src="Task2/Composition_OG1.png"/>
+<img style="max-width:25%;max-height:25%;border:1px solid black;" src="Task2/Composition_OG2.png"/>
 <h2>Redone</h2>
-<img style="max-width:25%;max-height:25%" src="Task2/Composition_Redone1.png"/>
-<img style="max-width:25%;max-height:25%" src="Task2/Composition_Redone2.png"/>
+<img style="max-width:25%;max-height:25%;border:1px solid black;" src="Task2/Composition_Redone1.png"/>
+<img style="max-width:25%;max-height:25%;border:1px solid black;" src="Task2/Composition_Redone2.png"/>
 <h2>Analysis</h2>
 Scores do have some aspects in common, however, the original is distorded after the conversion from SonicVisualizer.
 		</div>
