--- a/Week_10_Lab/Week10.html
+++ b/Week_10_Lab/Week10.html
@@ -28,8 +28,8 @@
 	<div class="el_center">
 <h1>Task 1 Captures</h1>
 <img style="border:1px solid black;" src="Task1/1.png"/>
-<img style="border:1px solid black;" src="Task1/2.png"/>
-<img style="border:1px solid black;" src="Task1/3.png"/>
+<img style="max-width:120%;max-height:120%;border:1px solid black;" src="Task1/2.png"/>
+<img style="max-width:120%;max-height:120%;border:1px solid black;" src="Task1/3.png"/>
 <h1>Task 2 Analysis</h1>
 <h2>Original</h2>
 <img style="max-width:25%;max-height:25%;border:1px solid black;" src="Task2/Composition_OG1.png"/>
