--- a/Week_10_Lab/Week10.html
+++ b/Week_10_Lab/Week10.html
@@ -28,8 +28,8 @@
 	<div class="el_center">
 <h1>Task 1 Captures</h1>
 <img style="border:1px solid black;" src="Task1/1.png"/>
-<img style="max-width:120%;max-height:120%;border:1px solid black;" src="Task1/2.png"/>
-<img style="max-width:120%;max-height:120%;border:1px solid black;" src="Task1/3.png"/>
+<img style="max-width:200%;max-height:200%;border:1px solid black;" src="Task1/2.png"/>
+<img style="max-width:200%;max-height:200%;border:1px solid black;" src="Task1/3.png"/>
 <h1>Task 2 Analysis</h1>
 <h2>Original</h2>
 <img style="max-width:25%;max-height:25%;border:1px solid black;" src="Task2/Composition_OG1.png"/>
@@ -38,8 +38,10 @@
 <img style="max-width:25%;max-height:25%;border:1px solid black;" src="Task2/Composition_Redone1.png"/>
 <img style="max-width:25%;max-height:25%;border:1px solid black;" src="Task2/Composition_Redone2.png"/>
 <h2>Analysis</h2>
-Scores do have some aspects in common, however, the original is distorded after the conversion from SonicVisualizer.
-		</div>
+<p>The redone score has managed to detect the BPM of the original along with some patterns in the representation. However, it is mostly
+different from the original in notation and by the way it sounds. This means that automatic transcription is not reliable and should
+be carefully examined prior to implementation. Furthermore, additional research should be carried out in order to enhance the automatic
+transcription process with the possible use of machine learning.</p></div>
 </body>
 
 </html>
