--- a/Week_4_Lab/Week4_Data.html
+++ b/Week_4_Lab/Week4_Data.html
@@ -12,7 +12,7 @@
   <a href="../verovio.html">Weeks 2&3 Score</a>
   <a href="../Week_4_Lab/Task1/outup_file.csv">Week 4 Table</a>
   <a href="../Week_4_Lab/Week4_Data.html">Week 4 Lab Data</a>
-  <a href="../Week_5_Lab/meischema.xsd">Week 5 Schema</a>
+  <a href="../Week_5_Lab/Week5.html">Week 5</a>
   <a href="../myMeta.html">Week 7 Metadata</a>
   <a href="../Week_8_Lab/Week8_Task1.xlsx">Week 8 Table</a>
   <a href="../Week_8_Lab/Week8_Data.html">Week 8 Lab Analysis</a>
