--- a/Week_4_Lab/Week4_Data.html
+++ b/Week_4_Lab/Week4_Data.html
@@ -10,7 +10,6 @@
 <div class="topnav">
   <a href="../index.html">Home</a>
   <a href="../verovio.html">Weeks 2&3 Score</a>
-  <a href="../Week_4_Lab/Task1/outup_file.csv">Week 4 Table</a>
   <a href="../Week_4_Lab/Week4_Data.html">Week 4 Lab Data</a>
   <a href="../Week_5_Lab/Week5.html">Week 5</a>
   <a href="../myMeta.html">Week 7 Metadata</a>
@@ -26,6 +25,7 @@
 <img style="max-width:50%;max-height:50%;border:1px solid black;" src="Task2/piano_roll.png"/>
 <h1>Scatter Plot</h1>
 <img style="max-width:50%;max-height:50%;border:1px solid black;" src="Task2/scatter_plot.png"/>
+<p>  <a href="../Week_4_Lab/Task1/outup_file.csv">Download the Week 4 Table</a></p>
 </div>
 </body>
 
