--- a/Week_8_Lab/Week8_Data.html
+++ b/Week_8_Lab/Week8_Data.html
@@ -14,7 +14,6 @@
   <a href="../Week_4_Lab/Week4_Data.html">Week 4 Lab Data</a>
   <a href="../Week_5_Lab/Week5.html">Week 5</a>
   <a href="../myMeta.html">Week 7 Metadata</a>
-  <a href="../Week_8_Lab/Week8_Task1.xlsx">Week 8 Table</a>
   <a href="../Week_8_Lab/Week8_Data.html">Week 8 Lab Analysis</a>
   <a href="../Week_9_Lab/Week9_Data.html">Week 9 Lab</a>
   <a href="../Week_10_Lab/Week10.html">Week 10 Lab</a>
@@ -34,7 +33,8 @@
 extracting information, whereas waveform analysis does not provide that much of a distinct representation of frequency over time.
 For example, in the YungKartz song, the spectogram representation shows a better dipiction of the frequency variation
 over time.</p>
-    </div>
+<p><a href="../Week_8_Lab/Week8_Task1.xlsx">Download the Week 8 Table</a></p>
+</div>
 </body>
 
 </html>
