--- a/Week_9_Lab/Week9_Data.html
+++ b/Week_9_Lab/Week9_Data.html
@@ -9,15 +9,13 @@
 <body>
 <div class="topnav">
   <a href="../index.html">Home</a>
-  <a href="../verovio.html">Weeks 2&3 Score</a>
-  <a href="../Week_4_Lab/Task1/outup_file.csv">Week 4 Table</a>
-  <a href="../Week_4_Lab/Week4_Data.html">Week 4 Lab Data</a>
+  <a href="../verovio.html">Weeks 2&3</a>
+  <a href="../Week_4_Lab/Week4_Data.html">Week 4</a>
   <a href="../Week_5_Lab/Week5.html">Week 5</a>
-  <a href="../myMeta.html">Week 7 Metadata</a>
-  <a href="../Week_8_Lab/Week8_Task1.xlsx">Week 8 Table</a>
-  <a href="../Week_8_Lab/Week8_Data.html">Week 8 Lab Analysis</a>
-  <a href="../Week_9_Lab/Week9_Data.html">Week 9 Lab</a>
-  <a href="../Week_10_Lab/Week10.html">Week 10 Lab</a>
+  <a href="../myMeta.html">Week 7</a>
+  <a href="../Week_8_Lab/Week8_Data.html">Week 8</a>
+  <a href="../Week_9_Lab/Week9_Data.html">Week 9</a>
+  <a href="../Week_10_Lab/Week10.html">Week 10</a>
 </div>
   <div class="el_center">
 <h1>Ketsa - Slow Vibing</h1>
