--- a/verovio.html
+++ b/verovio.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="index.css">
     <meta charset="utf-8">
-    <title>Verovio App demo</title>
+    <title>Weeks 2 and 3</title>
     <style>
     html, body {
         width: 100%;
