--- a/myMeta.html
+++ b/myMeta.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>With Styling</title>
+  <title>Week 7</title>
   <link rel="stylesheet" type="text/css" href="index.css">
   <meta charset="utf-8">
   <link rel="stylesheet" href="myMeta.css" media="all" />
