--- a/Week_8_Lab/Week8_Data.html
+++ b/Week_8_Lab/Week8_Data.html
@@ -28,8 +28,8 @@
 <img style="max-width:50%;max-height:50%;border:1px solid black;" src="Track3/YungKartz_Starz.png">
 <img style="max-width:50%;max-height:50%;border:1px solid black;" src="Track3/YungKartz_Starz1.png">
 <h1>Analysis</h1>
-<p>Time-frequency analysis allows for a better representation of frequency throughout time. This can be helpful for
-extracting information, whereas waveform analysis does not provide that much of a distinct representation of frequency over time.
+<p>Time-frequency analysis, based on its name, allows for a better representation of the frequency throughout time. This can be helpful for
+extracting more valuable information when compared to waveform analysis. Waveform analysis does not provide that much of a distinct representation of frequency over time.
 For example, in the YungKartz song, the spectogram representation shows a better dipiction of the frequency variation
 over time.</p>
 <p><a href="../Week_8_Lab/Week8_Task1.xlsx">Download the Week 8 Table</a></p>
