--- a/Week_9_Lab/Week9_Data.html
+++ b/Week_9_Lab/Week9_Data.html
@@ -29,8 +29,9 @@
 <img style="max-width:33%;max-height:33%;border:1px solid black;" src="Track2/Track2_ChromagramAnalysis.png">
 <img style="max-width:33%;max-height:33%;border:1px solid black;" src="Track3/Track3_ChromagramAnalysis.png">
 <h1>Analysis</h1>
-<p>There is a distinct difference between the first two tracks and the last one. The histogram of the third track shows that the levels are lower than those of the first
-two tracks meaning that there will be a difference which can be expected when listening to the third track compared to the other two.</p>
+<p>From the three generated historgrams, a distinct difference between the first two tracks and the last one can be noticed.
+The histogram of the third track depicts that the levels are lower than those of the first
+two tracks, meaning that there will be an expected difference when listening to the third track in comparison to the other two.</p>
 </div>
 </body>
 
